Twitter handle changed

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <title>nudehall</title>
 </head>
 <body class="bg">
-  <p><a href="https://twitter.com/_simplepotato" target="_blank" >Domain nudehall.com </br>is for sale<br>DM me on Twitter</br>@_simplepotato</a></p>
+  <p><a href="https://twitter.com/stellarstoic" target="_blank" >Domain nudehall.com </br>is for sale<br>DM me on Twitter</br>@StellarStoic</a></p>
 </body>
 </html>
